# auto-sme

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README-PRODUCTION.md  README.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
docs/: api.md  architecture.md
src/auto_sme/: crud.py  database.py  main.py  models.py  store.py
src/auto_sme/routers/: inventory.py  orders.py  reports.py  tasks.py  whatsapp.py
tests/: conftest.py  test_api.py  test_crud.py
