[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-sme"
version = "0.1.0"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "twilio>=9.0",
    "pytest>=7.0",
    "reportlab>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8", "isort", "mypy"]

[project.scripts]
auto-sme = "auto_sme.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
